--- a/clientviews/admin/assignments-admin.page.tmpl
+++ b/clientviews/admin/assignments-admin.page.tmpl
@@ -47,9 +47,10 @@
                     </td>
                     <td class="text-center">
                         {{if ne .GradedFile ""}}
-                            <a href="/admin/sections/assignments/download-graded/{{.UserID}}/{{.ID}}"><i class="fa fa-download"></i></a>
+                            <a href="/admin/sections/assignments/download-graded/{{.UserID}}/{{.ID}}"><i
+                                        class="fa fa-download"></i></a>
                         {{else}}
-                                N/A
+                            N/A
                         {{end}}
                     </td>
                 </tr>
