--- a/clientviews/admin/student-assignments.page.tmpl
+++ b/clientviews/admin/student-assignments.page.tmpl
@@ -33,7 +33,9 @@
                         <tr>
                             <td>{{.Description}}</td>
                             <td>{{.Course.CourseName}}</td>
-                            <td>Download: <a href="/static/site-content/assignments/{{$auth.ID}}/{{.FileName}}">{{.FileNameDisplay}}</a></td>
+                            <td>Download: <a
+                                        href="/static/site-content/assignments/{{$auth.ID}}/{{.FileName}}">{{.FileNameDisplay}}</a>
+                            </td>
                             <td>{{humanDateTime .CreatedAt}}</td>
                             <td>
                                 {{if and (gt .Mark 0) (gt .TotalValue 0)}}
